<?xml version="1.0"?>
<package format="2">
  <name>modelica_bridge</name>
  <version>0.1.0</version>
  <description>A package for connecting ROS to Modelica tools via TCP sockets</description>
  <url type="website">https://wiki.ros.org/modelica_bridge</url>
  <url type="repository">https://github.com/ModROS/modelica_bridge.git</url>

  <maintainer email="sh.swami235@gmail.com">Shashank Swaminathan</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>joy</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
</package>
