<?xml version="1.0"?>
<package format="2">
  <name>modelica_bridge</name>
  <version>0.1.1</version>
  <description>
    ROS package for bridging ROS with Modelica tools via TCP/IP sockets.
    Meant for use along with the ROS_Bridge Modelica package, made by the same developer.
  </description>
  <url type="website">https://wiki.ros.org/modelica_bridge</url>
  <url type="repository">https://github.com/ModROS/modelica_bridge.git</url>

  <maintainer email="sh.swami235@gmail.com">Shashank Swaminathan</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>joy</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
</package>
