<?xml version="1.0"?>
<package format="2">
  <name>modelica_bridge_examples</name>
  <version>0.1.0</version>
  <description>An example package of using the modelica_bridge package</description>

  <maintainer email="sh.swami235@gmail.com">Shashank Swaminathan</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>joy</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>modelica_bridge</depend>

</package>
